1998-01-26  Richard Henderson  <rth@cygnus.com>

	* sysdeps/alpha/dl-machine.h (TRAMPOLINE_TEMPLATE): Move declaration
	of the trampoline function into the macro.
	* sysdeps/unix/sysv/linux/alpha/clone.S: Fix ldgp for PROF.
	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Revert last change;
	kernel 2.1.82 has this fixed.

	* sysdeps/unix/sysv/linux/alpha/rt_sigaction.S: New file.
	* sysdeps/unix/sysv/linux/alpha/sys/ucontext.h: New file.

1998-01-26  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/alpha/syscalls.list: Add change to
	support sigaction on kernels > 2.1.7x.

1998-01-01 13:52  Ulrich Drepper  <drepper@cygnus.com>

	* elf/dl-misc.c (_dl_sysdep_read_whole_file): Don't map the file
	if it is empty.

	* elf/rtld.c (dl_main): Correct parsing of ld.so.preload file.
	Patch by David Engel <david@sw.ods.com>.

	* configure.in: Fix another typo in --enable-add-ons code.

1998-01-26 03:48  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/siglist.c: Add copyright text.

1998-01-26  Andreas Jaeger  <aj@arthur.rhein-neckar.de>

	* nss/nss_files/files-network.c: Correct order of parameters for
	getnetbyaddr.

1998-01-26 00:57  Ulrich Drepper  <drepper@cygnus.com>

	* db2/Makefile (routines): Add os_alloc.
	* db2/db.h: Update from db-2.3.16.
	* db2/db_185.h: Likewise.
	* db2/db_int.h: Likewise.
	* db2/btree/bt_close.c: Likewise.
	* db2/btree/bt_cursor.c: Likewise.
	* db2/btree/bt_delete.c: Likewise.
	* db2/btree/bt_open.c: Likewise.
	* db2/btree/bt_page.c: Likewise.
	* db2/btree/bt_put.c: Likewise.
	* db2/btree/bt_rec.c: Likewise.
	* db2/btree/bt_recno.c: Likewise.
	* db2/btree/btree_auto.c: Likewise.
	* db2/common/db_appinit.c: Likewise.
	* db2/common/db_apprec.c: Likewise.
	* db2/common/db_err.c: Likewise.
	* db2/common/db_region.c: Likewise.
	* db2/common/db_shash.c: Likewise.
	* db2/db/db.c: Likewise.
	* db2/db/db_auto.c: Likewise.
	* db2/db/db_conv.c: Likewise.
	* db2/db/db_dispatch.c: Likewise.
	* db2/db/db_dup.c: Likewise.