@@ -1,5 +1,8 @@
 1998-01-26  Richard Henderson  <rth@cygnus.com>
 
+	* sysdeps/unix/sysv/linux/alpha/bits/mman.h: Dyke out the
+	unimplemented OSF/1 definitions so that they are not accidentally seen.
+
 	* sysdeps/alpha/dl-machine.h (TRAMPOLINE_TEMPLATE): Move declaration
 	of the trampoline function into the macro.
 	* sysdeps/unix/sysv/linux/alpha/clone.S: Fix ldgp for PROF.
